[gd_scene load_steps=32 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://halweapon/halberd.tscn" type="PackedScene" id=2]
[ext_resource path="res://raw_sprites/player/wave.png" type="Texture" id=3]
[ext_resource path="res://scripts/dircomp.gd" type="Script" id=4]
[ext_resource path="res://scripts/physicsthings.gd" type="Script" id=5]
[ext_resource path="res://state_machine/state_machine.gd" type="Script" id=6]
[ext_resource path="res://player/player_states/player_floor.gd" type="Script" id=7]
[ext_resource path="res://player/player_states/player_air.gd" type="Script" id=8]
[ext_resource path="res://player/player_animations.gd" type="Script" id=9]
[ext_resource path="res://raw_sprites/player/circlething.png" type="Texture" id=10]
[ext_resource path="res://scripts/JumpController.gd" type="Script" id=11]
[ext_resource path="res://player/Stomp.gd" type="Script" id=12]
[ext_resource path="res://player/platform_spawner.gd" type="Script" id=14]
[ext_resource path="res://state_machine/state.gd" type="Script" id=15]
[ext_resource path="res://player/StompBreaker.gd" type="Script" id=16]
[ext_resource path="res://raw_sprites/player/hampterbody.png" type="Texture" id=17]
[ext_resource path="res://raw_sprites/player/hampterleg.png" type="Texture" id=18]

[sub_resource type="Animation" id=1]
resource_name = "DASHDASH"
length = 0.104

[sub_resource type="Animation" id=2]
resource_name = "climb"
length = 0.104

[sub_resource type="Animation" id=9]
resource_name = "glide"
length = 0.059

[sub_resource type="Animation" id=15]
resource_name = "hurt"
length = 0.042
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D2/HampterSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D2/Left:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, -16 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D2/Right:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, -18 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D2/Left:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node2D2/HampterSprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.000906421 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=11]
resource_name = "idle"
length = 0.042
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D2/HampterSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D2/Left:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, -11 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D2/Right:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 9, -11 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D2/Left:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node2D2/HampterSprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "thefall"
length = 0.042
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D2/HampterSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D2/Right:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4, -11 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D2/Left:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D2/Left:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, -17 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node2D2/HampterSprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "thejump"
length = 0.076
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D2/HampterSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D2/Left:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 9, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D2/Right:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 6, -15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D2/Left:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node2D2/HampterSprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk"
length = 0.264
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D2/HampterSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -12 ), Vector2( 0, -10 ), Vector2( 0, -13 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D2/Left:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -2, -11 ), Vector2( 3, -10 ), Vector2( 10, -12 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D2/Right:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 9, -11 ), Vector2( 3, -10 ), Vector2( -3, -12 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D2/Left:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node2D2/HampterSprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 10, 12 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 1, 17 )

[node name="KinematicBody2D" type="KinematicBody2D" groups=["player"]]
collision_layer = 161
script = ExtResource( 1 )

[node name="DirComp" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 4 )

[node name="PhysicsStuff" type="Node" parent="."]
script = ExtResource( 5 )
gravity_only_when_not_on_floor = false

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 6 )
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
path_fallstate = NodePath("../fall")
path_floorstate = NodePath("../walk")
path_jumpstate = NodePath("../jump")
path_slamstate = NodePath("../stomp")

[node name="walk" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
path_fallstate = NodePath("../fall")
path_floorstate = NodePath("../idle")
path_jumpstate = NodePath("../jump")
is_walk_state = true

[node name="jump" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
path_idlestate = NodePath("../idle")
path_walk_state = NodePath("../walk")
path_air_state = NodePath("../fall")

[node name="fall" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
path_idlestate = NodePath("../idle")
path_walk_state = NodePath("../walk")
path_air_state = NodePath("../jump")
is_fall_state = true

[node name="stomp" type="Node" parent="StateMachine"]
script = ExtResource( 12 )
path_idlestate = NodePath("../idle")

[node name="tuberide" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 11 )
max_jumps = 1
jump_force = -275

[node name="StompBreaker" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 20 )
script = ExtResource( 16 )

[node name="DashBreaker" type="RayCast2D" parent="."]
position = Vector2( 0, -12 )
cast_to = Vector2( 40, 0 )
script = ExtResource( 16 )
break_man_type = 1

[node name="Node2D2" type="Node2D" parent="."]

[node name="HampterSprite" type="Sprite" parent="Node2D2"]
position = Vector2( 0, -12 )
texture = ExtResource( 17 )
hframes = 2
frame = 1

[node name="Node2D" parent="Node2D2/HampterSprite" instance=ExtResource( 2 )]
show_behind_parent = true
position = Vector2( 7, -1 )

[node name="Left" type="Sprite" parent="Node2D2"]
position = Vector2( -2, -16 )
texture = ExtResource( 18 )

[node name="Right" type="Sprite" parent="Node2D2"]
show_behind_parent = true
position = Vector2( 12, -18 )
texture = ExtResource( 18 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D2"]
root_node = NodePath("../..")
anims/DASHDASH = SubResource( 1 )
anims/climb = SubResource( 2 )
anims/glide = SubResource( 9 )
anims/hurt = SubResource( 15 )
anims/idle = SubResource( 11 )
anims/thefall = SubResource( 14 )
anims/thejump = SubResource( 12 )
anims/walk = SubResource( 6 )
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4.769 )
shape = SubResource( 13 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1, -3 )
z_index = 1
frames = SubResource( 19 )
frame = 2
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -12 )
rotation = 1.5708
scale = Vector2( 2, -2 )
z_index = 1
frames = SubResource( 19 )
frame = 1
playing = true

[node name="Circlething" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -20 )
scale = Vector2( 2, 2 )
z_index = 1
texture = ExtResource( 10 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -12 )
script = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -15 )
shape = SubResource( 10 )

[connection signal="news_recived" from="." to="." method="_on_news_recived"]
[connection signal="entered" from="StateMachine/idle" to="Node2D2/AnimationPlayer" method="_on_idle_entered"]
[connection signal="landed" from="StateMachine/idle" to="Node2D" method="reset_jumps"]
[connection signal="entered" from="StateMachine/walk" to="." method="_on_walk_entered"]
[connection signal="entered" from="StateMachine/walk" to="Node2D2/AnimationPlayer" method="_on_walk_entered"]
[connection signal="exited" from="StateMachine/walk" to="." method="_on_walk_exited"]
[connection signal="entered" from="StateMachine/jump" to="Node2D2/AnimationPlayer" method="_on_jump_entered"]
[connection signal="exited" from="StateMachine/jump" to="." method="_on_jump_exited"]
[connection signal="entered" from="StateMachine/fall" to="Node2D2/AnimationPlayer" method="_on_fall_entered"]
[connection signal="start_coyote_time" from="StateMachine/fall" to="Node2D" method="start_coyote_time"]
[connection signal="entered" from="StateMachine/stomp" to="." method="_on_Stomp_entered"]
[connection signal="entered" from="StateMachine/stomp" to="StompBreaker" method="enable"]
[connection signal="entered" from="StateMachine/stomp" to="AnimatedSprite" method="show"]
[connection signal="exited" from="StateMachine/stomp" to="." method="_on_Stomp_exited"]
[connection signal="exited" from="StateMachine/stomp" to="StompBreaker" method="disable"]
[connection signal="exited" from="StateMachine/stomp" to="AnimatedSprite" method="hide"]
[connection signal="restrict_movement" from="Node2D2/HampterSprite/Node2D/AttackStateMachine" to="." method="_on_AttackStateMachine_restrict_movement"]
[connection signal="resume_movement" from="Node2D2/HampterSprite/Node2D/AttackStateMachine" to="." method="_on_AttackStateMachine_resume_movement"]
[connection signal="uppercut" from="Node2D2/HampterSprite/Node2D/AttackStateMachine" to="." method="_on_AttackStateMachine_uppercut"]

[editable path="Node2D2/HampterSprite/Node2D"]
